@startuml
skinparam linetype ortho

skinparam nodesep 150
skinparam ranksep 100

top to bottom direction

struct Vector3 <<DataType>> {
 + float x
 + float y
 + float z
}

abstract class Geometry {
 + Vector3 origin
 + {abstract} bool is_inside(position: Vector3)
}

together {
 class RectangularPrism {
  + Vector3 size
  + bool is_inside(position: Vector3)
 }

 class Cylinder {
  + radius: float
  + height: float
  + bool is_inside(position: Vector3)
 }
}

Cylinder -up-|> Geometry
RectangularPrism -up-|> Geometry
@enduml
